2010-06-25  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: Document 'fink list --format=' output modes

2010-06-09  Daniel Johnson  <daniel@daniel-johnson.org>

	* fink.conf.5.in: Document new DownloadMethod:aria2

2010-04-17  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: fix nroff warning (remove blank line)

2010-01-09  David Fang  <fangism@users.sourceforge.net>

	* compiler_wrapper.in: finds %p/bin for ccache-default

2010-01-06  Daniel Macks  <dmacks@netspace.org>

	* all: update copyright

2009-11-24  Augusto Devegili  <monipol@users.sourceforge.net>

	* fink.conf.5.in: New MaxBuildJobs option and minor cleanup

2009-09-18  Augusto Devegili  <monipol@users.sourceforge.net>

	* fink.8.in: fink list -m,-s do not accept regular expressions

2009-05-16  Dave Morrison  <drm@finkproject.org>

	* inject.pl: must pass arguments when reexecuting under sudo

2009-05-15  Dave Morrison  <drm@finkproject.org>

	* setup.sh: apt-get-lockwait now specifies the full path to the
	apt-get executable (but, as before, dpkg-lockwait does NOT... this
	is important for bootstrapping)
	* bootstrap, Release, MANIFEST: install the initial Release and
	Packages.gz files during bootstrapping
	* inject.pl: run under sudo
	* inject.pl: use $0

2009-05-12  Dave Morrison  <drm@finkproject.org>

	* MANIFEST.SKIP: skip fink-x86_64.info.in and fink-x86_64.info
	* bootstrap: provide VERSION file for a bootstrapped fink installation
	* bootstrap: actually, when bootstrapping, the VERSION file should
	say "bootstrap"

2009-05-12  Dave Morrison  <drm@finkproject.org>

	* bootstrap, bootstrap-phase2.pl: refactor bootstrap
	* setup.sh: use the correct perl executable under 10.5/x86_64
	* fink-x86_64.info.in: make fink depend on perl588 under 10.5/x86_64

2009-05-02  Dave Morrison  <drm@finkproject.org>

	* bootstrap: seek confirmation from user about the choice of
	10.5/x86_64
	* bootstrap, bootstrap-phase2.pl: move root method selection to
	bootstrap