@@ -1,5 +1,6 @@
 PREFIX=/sw
 ARCHITECTURE=i386
+DISTRIBUTION=10.6
 VERSION=`cat VERSION`
 TEST_BASEPATH=$(PWD)/t/basepath
 TESTS=.
@@ -11,6 +12,7 @@ all:
 	@echo -e "\tbootstrap   install a fresh fink installation"
 	@echo -e "\t            PREFIX can be set, defaults to /sw"   
 	@echo -e "              ARCHITECTURE can also be set, defaults to i386"   
+	@echo -e "              DISTRIBUTION can also be set, defaults to 10.6"   
 	@echo -e "\tinstall     install to an existing fink installation"
 	@echo -e "\ttest        perform tests on the fink code"
 	@echo -e "\tclean       remove all extraneous files"
@@ -26,7 +28,7 @@ install:
 	./inject.pl $(PREFIX)
 
 test_setup:
-	./setup.sh $(TEST_BASEPATH) $(ARCHITECTURE)
+	./setup.sh $(TEST_BASEPATH) $(ARCHITECTURE) $(DISTRIBUTION)
 
 manifest_check:
 	perl -MExtUtils::Manifest=fullcheck -e 'my($$missing, $$extra) = fullcheck;exit (@$$missing || @$$extra)'
