@@ -21,14 +21,15 @@
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110, USA.
 #
 
-if [ $# -ne 2 ]; then
+if [ $# -ne 3 ]; then
   echo "Usage: ./setup.sh <prefix> <architecture>"
-  echo "  Example: ./setup.sh /sw i386"
+  echo "  Example: ./setup.sh /sw i386 10.6"
   exit 1
 fi
 
 basepath=$1
 architecture=$2
+distribution=$3
 version=`cat VERSION`
 
 perlexe="/usr/bin/perl"
@@ -66,6 +67,7 @@ echo "Creating man pages..."
 sed "s|@PREFIX@|$basepath|g" <fink.8.in \
   | perl -MTime::Local -MPOSIX=strftime -p -e '$d="Date:";if (s/(\.Dd \$$d) (\d+)\/(\d+)\/(\d+) (\d+):(\d+):(\d+) \$/\1/) {$epochtime = timegm($7,$6,$5,$4,$3-1,$2-1900);$datestr = strftime "%B %e, %Y", localtime($epochtime); s/(\.Dd )\$$d/$1$datestr/;}' \
   >fink.8
+echo "Distribution $distribution..."
 sed "s|@PREFIX@|$basepath|g" <fink.conf.5.in \
   | perl -MTime::Local -MPOSIX=strftime -p -e '$d="Date:";if (s/(\.Dd \$$d) (\d+)\/(\d+)\/(\d+) (\d+):(\d+):(\d+) \$/\1/) {$epochtime = timegm($7,$6,$5,$4,$3-1,$2-1900);$datestr = strftime "%B %e, %Y", localtime($epochtime); s/(\.Dd )\$$d/$1$datestr/;}' \
   >fink.conf.5
