@@ -1,3 +1,7 @@
+2010-07-02  Dave Morrison  <drm@finkproject.org>
+
+	* fink.info.in, Makefile, setup.sh: feed $Distribution to setup.sh
+
 2010-06-25  Daniel Macks  <dmacks@netspace.org>
 
 	* fink.8.in: Document 'fink list --format=' output modes
